--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Limovia grundad 2023, är ett lokalt företag som erbjuder privata chaufförer dygnet runt.">
+        content="Limovia grundad 2024, är ett lokalt företag som erbjuder privata chaufförer dygnet runt.">
 
     <title>Limovia | Officiella Hemsida</title>
     <link rel="shortcut icon" href="LOGOS/LimoviaFavicon.png" type="image/x-icon">
@@ -27,6 +27,9 @@
     <script defer src="JS/quoteSlide.js"></script>
     <script defer src="JS/fleetSlide.js"></script>
     <script defer src="JS/scroll.js"></script>
+
+    <script defer src="JS/service.js"></script>
+    <script defer src="JS/index.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
 
 
@@ -220,7 +223,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a></li>
                         </ul>
                     </div>
 
@@ -237,7 +240,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -253,7 +256,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Flygplatstransfer">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -269,7 +272,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Evenemangstransfer">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -284,7 +287,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -301,7 +304,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Lokal Transfer">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -318,7 +321,7 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
