--- a/service.html
+++ b/service.html
@@ -70,8 +70,10 @@
         </div>
 
         <section class="serviceInfo">
+            <div class="serviceInfoContainer middleContainer"></div>
             <div class="serviceInfoContainer">
                 <div class="serviceInfoContent">
+
                     <h1 class="serviceName" id="serviceName">Tjänstens namn</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque excepturi, quaerat eum minus
                         libero ullam maiores! Velit perferendis veniam id at a iusto.</p>
@@ -88,15 +90,19 @@
                         </div>
                     </div>
 
-                    <button>Boka Nu</button>
+                    <div class="serviceBookButton">
+                        <ul>
+                            <li><a href="#">Boka Nu</a></li>
+                        </ul>
+                    </div>
+
                 </div>
 
-
-
-                <hr>
+                <hr class="serviceHR">
 
                 <div class="serviceInfoContent">
-                    <h2>Beskrivning av tjänsten</h2>
+
+                    <h1>Beskrivning av tjänsten</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ab obcaecati necessitatibus
                         ratione
                         adipisci vitae quas est voluptatibus optio. Nam rem quibusdam laboriosam nihil quae dolorem
@@ -104,10 +110,26 @@
                         vitae, minima maxime corporis aliquid similique repellendus assumenda ad hic sequi recusandae
                         placeat numquam accusamus blanditiis eaque?</p>
 
-                    <img src="INTERIORIMG/BMWI7Interior.jpeg" alt="BMWI7Interior">
+                    <div class="carCard">
+                        <div class="carCardMainImage">
+                            <img src="" alt="">
+                        </div>
+                        <div class="carCardSlideImage">
+                            <div class="slideImage image1">
+                                <img src="" alt="">
+                            </div>
+                            <div class="slideImage image2">
+                                <img src="" alt="">
+                            </div>
+                            <div class="slideImage image3">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
-                <hr>
+                <hr class="serviceHR">
 
                 <div class="serviceInfoContent">
                     <h1>Avbokningspolicy</h1>
@@ -117,12 +139,12 @@
                         explicabo ab aliquid ratione suscipit illo.</p>
                 </div>
 
-                <hr>
+                <hr class="serviceHR">
 
                 <div class="serviceInfoContent">
-                    <h2>Kontakta oss vid frågor</h2>
+                    <h1>Kontakta oss vid frågor</h1>
                     <div class="addressRow">
-                        <h1>Vikingavägen 28</h1>
+                        <p>Vikingavägen 28</p>
                     </div>
                     <div class="addressRow">
                         <p>136 46, Stockholm, Sverige</p>
@@ -135,6 +157,8 @@
                     </div>
                 </div>
             </div>
+
+            <div class="serviceInfoContainer"></div>
 
         </section>
 
