--- a/service.html
+++ b/service.html
@@ -50,7 +50,7 @@
 
             <div class="logo">
                 <ul>
-                    <li><a href="#top">
+                    <li><a href="index.html">
                             <h1>Limovia</h1>
                         </a></li>
                 </ul>
@@ -78,18 +78,6 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque excepturi, quaerat eum minus
                         libero ullam maiores! Velit perferendis veniam id at a iusto.</p>
 
-                    <div class="serviceLength">
-                        <div>
-                            <p>Längd</p>
-                        </div>
-                        <div>
-                            <p>Tid</p>
-                        </div>
-                        <div>
-                            <p>Plats</p>
-                        </div>
-                    </div>
-
                     <div class="serviceBookButton">
                         <ul>
                             <li><a href="#">Boka Nu</a></li>
@@ -110,19 +98,130 @@
                         vitae, minima maxime corporis aliquid similique repellendus assumenda ad hic sequi recusandae
                         placeat numquam accusamus blanditiis eaque?</p>
 
-                    <div class="carCard">
-                        <div class="carCardMainImage">
-                            <img src="" alt="">
+                    <div class="serviceSlideshowMain">
+
+                        <!-- First Slideshow -->
+                        <div class="slideshow-container">
+                            <div class="slideshowTitle">
+                                <h3>BMW i7</h3>
+                            </div>
+                            <div class="mySlides">
+                                <img src="IMAGES/BMWI7.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/BMWI7Interior.jpeg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/BMWI7Interior2.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/BMWI7Interior3.jpg">
+                            </div>
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1, 0)"></span>
+                                <span class="dot" onclick="currentSlide(2, 0)"></span>
+                                <span class="dot" onclick="currentSlide(3, 0)"></span>
+                                <span class="dot" onclick="currentSlide(4, 0)"></span>
+                            </div>
                         </div>
-                        <div class="carCardSlideImage">
-                            <div class="slideImage image1">
-                                <img src="" alt="">
+
+                        <!-- Second Slideshow -->
+                        <div class="slideshow-container">
+                            <div class="slideshowTitle">
+                                <h3>Mercedes-Benz EQS</h3>
                             </div>
-                            <div class="slideImage image2">
-                                <img src="" alt="">
+                            <div class="mySlides">
+                                <img src="IMAGES/MercedesEQS.jpg">
                             </div>
-                            <div class="slideImage image3">
-                                <img src="" alt="">
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQSInterior.png">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQSInterior2.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQSInterior3.png">
+                            </div>
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1, 1)"></span>
+                                <span class="dot" onclick="currentSlide(2, 1)"></span>
+                                <span class="dot" onclick="currentSlide(3, 1)"></span>
+                                <span class="dot" onclick="currentSlide(4, 1)"></span>
+                            </div>
+                        </div>
+
+                        <!-- Third Slideshow -->
+                        <div class="slideshow-container">
+                            <div class="slideshowTitle">
+                                <h3>Mercedes-Benz Van EQV</h3>
+                            </div>
+                            <div class="mySlides">
+                                <img src="IMAGES/MercedesEQV.jpeg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQVInterior.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQVInterior2.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/MercedesEQVInterior3.jpg">
+                            </div>
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1, 2)"></span>
+                                <span class="dot" onclick="currentSlide(2, 2)"></span>
+                                <span class="dot" onclick="currentSlide(3, 2)"></span>
+                                <span class="dot" onclick="currentSlide(4, 2)"></span>
+                            </div>
+                        </div>
+
+                        <!-- Fourth Slideshow -->
+                        <div class="slideshow-container">
+                            <div class="slideshowTitle">
+                                <h3>Volvo EM90</h3>
+                            </div>
+                            <div class="mySlides">
+                                <img src="IMAGES/VolvoEM90.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEM90Interior.jpeg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEM90Interior2.jpeg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEM90Interior3.jpeg">
+                            </div>
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1, 3)"></span>
+                                <span class="dot" onclick="currentSlide(2, 3)"></span>
+                                <span class="dot" onclick="currentSlide(3, 3)"></span>
+                                <span class="dot" onclick="currentSlide(4, 3)"></span>
+                            </div>
+                        </div>
+
+                        <!-- Fifth Slideshow -->
+                        <div class="slideshow-container">
+                            <div class="slideshowTitle">
+                                <h3>Volvo EX90</h3>
+                            </div>
+                            <div class="mySlides">
+                                <img src="IMAGES/VolvoEX90.png">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEX90Interior.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEX90Interior2.jpg">
+                            </div>
+                            <div class="mySlides">
+                                <img src="INTERIORIMG/VolvoEX90Interior3.png">
+                            </div>
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1, 3)"></span>
+                                <span class="dot" onclick="currentSlide(2, 3)"></span>
+                                <span class="dot" onclick="currentSlide(3, 3)"></span>
+                                <span class="dot" onclick="currentSlide(4, 3)"></span>
                             </div>
                         </div>
                     </div>
@@ -133,7 +232,8 @@
 
                 <div class="serviceInfoContent">
                     <h1>Avbokningspolicy</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure error sapiente incidunt, sed
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure error sapiente incidunt,
+                        sed
                         sequi voluptatem accusamus voluptates, beatae aliquam quae dicta perferendis adipisci vitae
                         earum
                         explicabo ab aliquid ratione suscipit illo.</p>
@@ -173,7 +273,7 @@
         <div class="footerContent">
 
             <div class="footerLeft">
-                <span class="footerLogo"><a href="#top">
+                <span class="footerLogo"><a href="index.html">
                         <h3>Limovia</h3>
                     </a></span>
                 <p>&copy; 2024 Limovia Ltd</p>
