--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     <link rel="stylesheet" href="CSS/fleet.css">
     <link rel="stylesheet" href="CSS/contact.css">
 
-    
+
     <script defer src="JS/quoteSlide.js"></script>
     <script defer src="JS/fleetSlide.js"></script>
     <script defer src="JS/scroll.js"></script>
 
-    <script defer src="JS/service.js"></script>
     <script defer src="JS/index.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
 
@@ -223,7 +222,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Privatleasing">Läs mer</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -240,7 +240,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -256,7 +257,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Flygplatstransfer">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Flygplatstransfer">Läs
+                                    mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -272,7 +274,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Evenemangstransfer">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Evenemangstransfer">Läs
+                                    mer</a></li>
                         </ul>
                     </div>
                 </div>
@@ -287,7 +290,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Timbokning">Läs mer</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -304,7 +308,8 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Lokal Transfer">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton" href="service.html?service=Lokal Transfer">Läs mer</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -321,10 +326,12 @@
                     <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="#">Boka</a></li>
-                            <li><a class="readMoreServicesButton" href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
+                            <li><a class="readMoreServicesButton"
+                                    href="service.html?service=Stad till Stad-transfer">Läs mer</a></li>
                         </ul>
                     </div>
                 </div>
+
             </div>
 
         </section>
