--- a/book.html
+++ b/book.html
@@ -103,16 +103,17 @@
                         <button onclick="nextMonth()">Next Month</button>
                     </div>
 
-                    <div class="month" id="calendarMonth">
-                        <!-- Days of the week -->
-                        <div class="day">Sun</div>
-                        <div class="day">Mon</div>
-                        <div class="day">Tue</div>
-                        <div class="day">Wed</div>
-                        <div class="day">Thu</div>
-                        <div class="day">Fri</div>
-                        <div class="day">Sat</div>
+                    <div class="weekdays">
+                        <div class="weekday">Sun</div>
+                        <div class="weekday">Mon</div>
+                        <div class="weekday">Tue</div>
+                        <div class="weekday">Wed</div>
+                        <div class="weekday">Thu</div>
+                        <div class="weekday">Fri</div>
+                        <div class="weekday">Sat</div>
+                    </div>
 
+                    <div class="month" id="calendarMonth">
                         <!-- Dynamically generate days of the month -->
                     </div>
                 </div>
