--- a/book.html
+++ b/book.html
@@ -144,11 +144,9 @@
                 </div>
 
                 <div class="bookingInformationRow">
-                    <p class="price">00.0 kr</p>
+                    <p class="price" id="dynamicPrice">00.0 kr</p>
                 </div>
-
             </div>
-
         </section>
 
         <section class="bookingForm"></section>
