--- a/book.html
+++ b/book.html
@@ -118,7 +118,7 @@
                     </div>
                 </div>
 
-                <div class="time">
+                <div class="selectTime">
                     <div class="date" id="selectedDate">27 Januari</div>
 
                     <label for="pickupTime">Pick Up time</label>
